# fest-vibes-ai-v0

./: .env.example  .gitignore  BOOMY_CHATBOT_IMPLEMENTATION_PLAN.md  Dockerfile  LICENSE  PROMPT_COLLABORATION_GUIDE.md  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  pytest.ini
.claude/agents/: code-analyzer-refactor.md
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: twitter-bot-dashboard.json
scripts/: content_utils.py  generate_comments.py  generate_posts.py  generate_rag_posts.py  init-postgres.sql  mongo-init.js  prompt_collaboration_example.py  test_prompt_config.py
src/: main.py  scheduler.py
src/agents/: base_agent.py  content_agent.py  engagement_agent.py  follow_agent.py
src/config/: settings.py
src/database/: mongodb_manager.py  postgres_manager.py  rag_manager.py
src/models/: data_models.py
src/prompts/: __init__.py  agent_prompts.py  base_prompts.py  boomy_chatbot_prompt.md  content_utility_prompts.py  rag_prompts.py
src/utils/: llm_client.py  monitoring.py  rate_limiter.py  route_calculator.py
tests/: conftest.py  test_agents.py  test_database.py  test_rag_integration.py  test_rag_minimal.py  test_rag_simple.py  test_utils.py
